Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92966

MSVC compiler warning C4267 in qqmlirbuilder.cpp

    XMLWordPrintable

Details

    • e881ca02897f51175c382401d9713f6f77ede426 (qt/qtdeclarative/dev) 71fdc7116ac43fc99aee414c0c58b462a8b5bc9e (qt/qtdeclarative/6.1)

    Description

      C:\dev\qt\dev\src\qtdeclarative\src\qml\compiler\qqmlirbuilder.cpp(1653): warning C4267: 'initializing': conversion from 'size_t' to 'uint', possible loss of data
      C:\dev\qt\dev\src\qtdeclarative\src\qml\compiler\qqmlirbuilder.cpp(1653): warning C4267: 'initializing': conversion from 'size_t' to 'const uint', possible loss of data
      C:\dev\qt\dev\src\qtdeclarative\src\qml\compiler\qqmlirbuilder.cpp(1654): warning C4267: 'initializing': conversion from 'size_t' to 'uint', possible loss of data
      C:\dev\qt\dev\src\qtdeclarative\src\qml\compiler\qqmlirbuilder.cpp(1654): warning C4267: 'initializing': conversion from 'size_t' to 'const uint', possible loss of data
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes