Fix C4267 warning in qqmlirbuilder.cpp

Fixes: QTBUG-92966
Change-Id: I9acdb0d624a0950f9e28c6463530b27d282123e2
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit e881ca02897f51175c382401d9713f6f77ede426)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>